# TradeMetrics

./: CMakeLists.txt  README.md
benchmarks/: BenchMetrics.cpp  CMakeLists.txt  CMakeLists.txt.in
include/TradeMetrics/: CSVParser.h  Metrics.h  MetricsEngine.h  Trade.h  TradeFeed.h  TradeGen.h
src/: CMakeLists.txt  CSVParser.cpp  MetricsEngine.cpp  RandomTradeFeed.cpp  TradeFeed.cpp  TradeGen.cpp
tools/: CMakeLists.txt
tools/tmctl/: CMakeLists.txt  main.cpp
tools/tradegen/: CMakeLists.txt  main.cpp
unittests/: CMakeLists.txt  UnitMetrics.cpp  UnitMetricsEngine.cpp  UnitParser.cpp  UnitTrade.cpp
